--- a/app/static/css/erbhof_style.css
+++ b/app/static/css/erbhof_style.css
@@ -23,10 +23,15 @@ p {
     color: var(--bs-secondary);
 }
 
-.menu-img {
+.title-img {
     min-width: 200px !important;
     width:50%;
     height: auto;
+}
+
+.img-height {
+    min-height: 200px !important;
+    max-width: 100%;
 }
 
 .medal-img {
